UI parts created

--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -3,3 +3,7 @@
 @import './components';
 @import './home';
 @import './auth';
+@import './category';
+@import './details';
+@import './cart';
+@import './measure';
