--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -7,6 +7,7 @@ $primary: #c026d3;
 $primary-tint: #d946ef;
 $primary-shade: #a21caf;
 $gray-100: #f1f5f9;
+$gray-200: #ecf3fa;
 $gray-300: #cbd5e1;
 $gray-500: #64748b;
 $gray-700: #334155;
@@ -114,11 +115,72 @@ input {
   width: 100%;
   border: 2px solid transparent;
   border-radius: 8px;
+  color: $dark;
   @include md {
     padding: 20px 18px;
   }
   &:focus {
-    border: 2px solid $gray-300;
+    border: 2px solid $gray-700;
     outline: none;
+  }
+}
+
+.rounded-10 {
+  border-radius: 10px;
+}
+.rounded-20 {
+  border-radius: 20px;
+}
+.badges {
+  display: inline-block;
+  font-size: 14px;
+  background: #edd9f6;
+  padding: 10px 15px;
+  border-radius: 10px;
+  color: $primary;
+  margin-bottom: 5px;
+}
+
+.card {
+  padding: 10px;
+  border-radius: 10px;
+  border: 0;
+  .header {
+    img {
+      width: 100%;
+      border-radius: 8px;
+    }
+  }
+  .body {
+    padding: 20px 0 10px;
+    h4 {
+      color: $dark;
+    }
+    .badge {
+      background: #ffe60257;
+      color: #ff9a02;
+    }
+    .detail {
+      .avatar {
+        height: 32px;
+        width: 32px;
+        border-radius: 50%;
+        background: $secondary;
+        object-fit: cover;
+      }
+      p {
+        font-size: 12px;
+        line-height: 12px;
+        padding: 0;
+        span {
+          color: $dark;
+          font-weight: 600;
+        }
+      }
+      small {
+        font-size: 12px;
+        color: $gray-500;
+      }
+    }
   }
 }
