--- a/src/css/_components.scss
+++ b/src/css/_components.scss
@@ -7,6 +7,7 @@
   padding: 12px 16px;
   border-radius: 10px;
   border: 0;
+  cursor: pointer;
   &:hover {
     background: $gray-100;
   }
@@ -29,7 +30,7 @@
 }
 
 .button-outline {
-  color: $text;
+  color: $dark;
   font-size: 18px;
   padding: 10px 16px;
   border-radius: 10px;
