--- a/src/css/main.css
+++ b/src/css/main.css
@@ -119,6 +119,7 @@ input {
   width: 100%;
   border: 2px solid transparent;
   border-radius: 8px;
+  color: #0f172a;
 }
 
 @media (max-width: 908px) {
@@ -128,8 +129,75 @@ input {
 }
 
 input:focus {
-  border: 2px solid #cbd5e1;
+  border: 2px solid #334155;
   outline: none;
+}
+
+.rounded-10 {
+  border-radius: 10px;
+}
+
+.rounded-20 {
+  border-radius: 20px;
+}
+
+.badges {
+  display: inline-block;
+  font-size: 14px;
+  background: #edd9f6;
+  padding: 10px 15px;
+  border-radius: 10px;
+  color: #c026d3;
+  margin-bottom: 5px;
+}
+
+.card {
+  padding: 10px;
+  border-radius: 10px;
+  border: 0;
+}
+
+.card .header img {
+  width: 100%;
+  border-radius: 8px;
+}
+
+.card .body {
+  padding: 20px 0 10px;
+}
+
+.card .body h4 {
+  color: #0f172a;
+}
+
+.card .body .badge {
+  background: #ffe60257;
+  color: #ff9a02;
+}
+
+.card .body .detail .avatar {
+  height: 32px;
+  width: 32px;
+  border-radius: 50%;
+  background: #f97316;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.card .body .detail p {
+  font-size: 12px;
+  line-height: 12px;
+  padding: 0;
+}
+
+.card .body .detail p span {
+  color: #0f172a;
+  font-weight: 600;
+}
+
+.card .body .detail small {
+  font-size: 12px;
+  color: #64748b;
 }
 
 .button {
@@ -140,6 +208,7 @@ input:focus {
   padding: 12px 16px;
   border-radius: 10px;
   border: 0;
+  cursor: pointer;
 }
 
 .button:hover {
@@ -167,7 +236,7 @@ input:focus {
 }
 
 .button-outline {
-  color: #64748b;
+  color: #0f172a;
   font-size: 18px;
   padding: 10px 16px;
   border-radius: 10px;
@@ -411,7 +480,7 @@ footer p {
   opacity: 1;
 }
 
-.auth .body .inputGroup input[type="checkbox"] {
+.auth .body .inputGroup input[type="radio"] {
   width: 32px;
   height: 32px;
   -webkit-box-ordinal-group: 2;
@@ -437,5 +506,266 @@ footer p {
 .auth .body #forgot:hover {
   color: #a21caf;
   text-decoration: underline;
+}
+
+.category {
+  background: #f1f5f9;
+}
+
+.category .dropdowns {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  border-radius: 10px 10px 0 0;
+  z-index: 999;
+}
+
+.category .dropdowns:hover {
+  background-color: #ffffff;
+}
+
+.category .dropdowns #title {
+  padding: 16px;
+  border-radius: 10px;
+}
+
+.category .dropdowns #title:hover {
+  background-color: #ffffff;
+}
+
+.category .dropdowns #price-slider {
+  padding: 0 8px;
+}
+
+.category .dropdowns #price-slider:hover {
+  background-color: #ffffff;
+}
+
+.category .dropdowns li {
+  padding: 8px;
+  position: relative;
+  border-radius: 5px;
+}
+
+.category .dropdowns ul {
+  display: none;
+  background-color: #ffffff;
+  left: 0;
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  border-radius: 0 0 10px 10px;
+  list-style-type: none;
+  margin: 0;
+  padding: 8px;
+  width: 100%;
+}
+
+.category .dropdowns ul ul {
+  left: 100%;
+  position: absolute;
+  top: 0;
+  border-radius: 10px;
+}
+
+.category .dropdowns li:hover {
+  background-color: #edd9f6;
+  cursor: pointer;
+}
+
+.category .dropdowns li:hover > ul {
+  display: block;
+}
+
+.category .sidebar {
+  background-color: #ffffff;
+  padding: 0 20px 20px;
+  border-radius: 10px;
+}
+
+.category .sidebar details {
+  border: none;
+  outline: 0;
+}
+
+.category .sidebar details summary {
+  font-size: 1.1rem;
+  font-weight: 500;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 30px 0 0 0;
+}
+
+.category .sidebar details ul {
+  list-style: none;
+  margin: 10px 0;
+  padding: 0;
+}
+
+.category .sidebar details ul li a {
+  padding: 10px;
+  display: block;
+  border-radius: 8px;
+}
+
+.category .sidebar details ul li a:hover {
+  background: #edd9f6;
+  color: #a21caf;
+}
+
+.details {
+  background: #f1f5f9;
+}
+
+.details .view-product {
+  margin-top: 50px;
+}
+
+.details .view-product img {
+  width: 100%;
+  height: 500px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 10px;
+}
+
+.details .view-product p {
+  line-height: 2rem;
+}
+
+.cart {
+  background-color: #f1f5f9;
+}
+
+.cart .cart-nav ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.cart .cart-nav ul li a {
+  display: block;
+  padding: 16px;
+  border-radius: 10px;
+}
+
+.cart .cart-nav ul li a:hover {
+  background: #edd9f6;
+  color: #c026d3;
+}
+
+.cart .cart-nav ul .active {
+  background: #edd9f6;
+  color: #c026d3;
+}
+
+.measure {
+  background: #f1f5f9;
+}
+
+.measure .measure-nav {
+  background: #ffffff;
+  padding: 10px;
+}
+
+.measure .measure-nav .items {
+  border-radius: 8px;
+}
+
+.measure .measure-nav .items:hover {
+  background: #ecf3fa;
+}
+
+.measure .measure-nav .items:hover .number {
+  background: #c026d3;
+  color: #ffffff;
+}
+
+.measure .measure-nav .items .number {
+  background: #edd9f6;
+  height: 50px;
+  width: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #0f172a;
+  border-radius: 8px;
+}
+
+.measure .measure-nav .items h4 {
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.measure .measure-nav .items p {
+  font-size: 16px;
+  color: #c026d3;
+}
+
+.measure .measure-nav .active {
+  background: #ecf3fa;
+}
+
+.measure .measure-nav .active .number {
+  background: #c026d3;
+  color: #ffffff;
+}
+
+.measure .inputGroup {
+  position: relative;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+
+.measure .inputGroup label {
+  padding: 20px;
+  width: 100%;
+  border-radius: 10px;
+  text-align: center;
+  color: #0f172a;
+  cursor: pointer;
+  border: 2px solid #ffffff;
+  -webkit-transition: 0.2s all;
+  transition: 0.2s all;
+}
+
+.measure .inputGroup label img {
+  height: 120px;
+  width: 120px;
+}
+
+.measure .inputGroup label p {
+  margin-top: 20px;
+  font-size: 16px;
+  color: #0f172a;
+}
+
+.measure .inputGroup label:hover {
+  border: 2px solid #c026d3;
+}
+
+.measure .inputGroup input:checked ~ label {
+  border: 2px solid #c026d3;
+  background: #edd9f6;
+}
+
+.measure .inputGroup input[type="radio"] {
+  position: absolute;
+  cursor: pointer;
+  visibility: hidden;
 }
 /*# sourceMappingURL=main.css.map */
